--- a/templates/converter/index.html
+++ b/templates/converter/index.html
@@ -1,4 +1,5 @@
 <!-- converter/templates/converter/format_preserve.html -->
+<head><title>Image to Text Converter  </title></head>
 <form method="POST" enctype="multipart/form-data">
   {% csrf_token %}
   {{ form }}
